--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^7.0.0",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "next": "16.0.1",
     "pg": "^8.16.3",
     "react": "19.2.0",
