--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "timezones-list": "^3.1.0"
+    "timezones-list": "^3.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
