--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
